fix h2 align in #info-section on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -80,8 +80,13 @@ h2 {
     p {
         font-size: inherit;
     }
+
+    /*Automatically push right-aligned columns on mobile*/
     #info-section > div:nth-of-type(even) > div:nth-of-type(2) {
         order: -1 !important;
+    }
+    #info-section > div:nth-child(n) h2 {
+        text-align: center;
     }
 
     .row-tb-margin {
